finished information security background

--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -13,6 +13,57 @@
 % ESH Fork with JWT Authentication https://github.com/antoniosv/smarthome/tree/customhttpcontext/bundles/auth/org.eclipse.smarthome.auth.jwt
 % Orange: the future of digital trust https://www.orange.com/en/content/download/21358/412063/version/5/file/Orange+Future+of+Digital+Trust+Report.pdf
 
+@techreport{osgi_core,
+ author = {OSGi Alliance},
+ title = {OSGi Service Platform Release 4 Version 4.2 Core Specification},
+ howpublished = {Technical specification},
+ year = {2009},
+ month = {June},
+ url = {https://www.osgi.org/release-4-version-4-2-download/}
+}
+
+@techreport{RFC7519,
+ author = {M. Jones and J. Bradley and N. Sakimura},
+ title = {JSON Web Token (JWT)},
+ howpublished = {Internet Requests for Comments},
+ type = {RFC},
+ number = {7519},
+ year = {2015},
+ month = {May},
+ issn = {2070-1721},
+ publisher = {RFC Editor},
+ institution = {RFC Editor},
+ url = {http://www.rfc-editor.org/rfc/rfc7519.txt},
+ note = {\url{http://www.rfc-editor.org/rfc/rfc7519.txt}},
+}
+			
+
+@techreport{RFC2616,
+  author = {Roy T. Fielding and James Gettys and Jeffrey C. Mogul and Henrik Frystyk Nielsen and Larry Masinter and Paul J. Leach and Tim Berners-Lee},
+  title = {Hypertext Transfer Protocol -- HTTP/1.1},
+  howpublished = {Internet Requests for Comments},
+  type = {RFC},
+  number = {2616},
+  year = {1999},
+  month = {June},
+  issn = {2070-1721},
+  publisher = {RFC Editor},
+  institution = {RFC Editor},
+  url = {http://www.rfc-editor.org/rfc/rfc2616.txt},
+  note = {\url{http://www.rfc-editor.org/rfc/rfc2616.txt}},
+}
+			
+
+@book{stallings_01,
+ author = {Stallings, William and Brown, Lawrie},
+ title = {Computer Security: Principles and Practice},
+ year = {2014},
+ isbn = {0133773922, 9780133773927},
+ edition = {3rd},
+ publisher = {Prentice Hall Press},
+ address = {Upper Saddle River, NJ, USA},
+} 
+
 @article{access_01,
 title = "Access control in the Internet of Things: Big challenges and new opportunities",
 journal = "Computer Networks",
