--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -13,6 +13,13 @@
 % ESH Fork with JWT Authentication https://github.com/antoniosv/smarthome/tree/customhttpcontext/bundles/auth/org.eclipse.smarthome.auth.jwt
 % Orange: the future of digital trust https://www.orange.com/en/content/download/21358/412063/version/5/file/Orange+Future+of+Digital+Trust+Report.pdf
 
+@misc{servlet,
+ author = {Oracle},
+ title = {Lesson 5: Writing Servlets},
+ howpublished = {Technical tutorial},
+ url = {http://www.oracle.com/technetwork/java/servlet-142430.html}
+}
+
 @techreport{osgi_core,
  author = {OSGi Alliance},
  title = {OSGi Service Platform Release 4 Version 4.2 Core Specification},
